--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project",
   "version": "1.0.0",
-  "description": "this is the new tinder only for developers",
+  "description": "this is the new tinder for developer",
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
@@ -9,8 +9,7 @@
   },
   "keywords": [
     "node",
-    "js",
-    "javascript"
+    "js"
   ],
   "author": "bhaskar singh bhandari",
   "license": "ISC",
